--- a/Board/templates/sign/login.html
+++ b/Board/templates/sign/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h2>Log in</h2>
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="{% url 'bboard:login' %}">
     {%csrf_token%}
     <table>
         <tr>
