--- a/Board/templates/protect/index.html
+++ b/Board/templates/protect/index.html
@@ -3,6 +3,19 @@
 
 {% block content %}
 <h2>page of authorised user {{ request.user.username }}</h2>
+<form action="" method="get">
+    {{ filterset.form }}
+    <input type="submit" value="find">
+</form>
+<hr>
+<button><a href="/">discard filter</a></button>
+<h4>comments</h4>
+{% if comments %}
+{% for comment in comments %}
+{{ comment.author }}
+{{ comment.text }}
+{% endfor %}
+{% endif %}
 
 <button><a href="sign/logout/">LogOut</a></button>
 {% endblock  %}
