--- a/Board/templates/posts.html
+++ b/Board/templates/posts.html
@@ -11,6 +11,8 @@
     <thead>
         <tr>
             <th><a href="{% url 'bboard:post_add' %}">Create a new post</a></th>
+            <th><a href="{% url 'bboard:comment_add'   %}">Create a new comment</a></th>
+
         </tr>
         <tr>
             <th style="background-color: #29ABCA; color: #ffffff;">{{ 'Author' }}</th>
