--- a/Board/templates/protect/index.html
+++ b/Board/templates/protect/index.html
@@ -17,5 +17,5 @@
 {% endfor %}
 {% endif %}
 
-<button><a href="sign/logout/">LogOut</a></button>
+<button><a href="bboard/logout/">LogOut</a></button>
 {% endblock  %}
