--- a/Board/templates/flatpages/default.html
+++ b/Board/templates/flatpages/default.html
@@ -27,7 +27,7 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                   <a class="nav-link" href="#">Home
+                   <a class="nav-link" href="/bboard/">Home
                        <span class="sr-only">(current)</span>
                    </a>
                </li>
@@ -36,6 +36,10 @@
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="/contacts/">Contact</a>
+               </li>
+
+               <li class="nav-item">
+                   <a class="nav-link" href="/">{{ request.user.username }}</a>
                </li>
            </ul>
        </div>
