--- a/Board/templates/sign/login.html
+++ b/Board/templates/sign/login.html
@@ -16,6 +16,6 @@
     </table>
     <input type="submit" value="Login">
 </form>
-<button> <a href="/sign/signup"> Register </a></button>
+<button> <a href="/bboard/signup"> Register </a></button>
 
 {% endblock %}
