--- a/Board/templates/posts.html
+++ b/Board/templates/posts.html
@@ -10,8 +10,16 @@
 <table class="table table-bordered table-striped table-hover">
     <thead>
         <tr>
-            <th><a href="{% url 'bboard:post_add' %}">Create a new post</a></th>
-            <th><a href="{% url 'bboard:comment_add'   %}">Create a new comment</a></th>
+            <th>
+            <button class="btn btn-primary" style="background-color: #28a745;"  type="button">
+                <a href="{% url 'bboard:post_add' %}" style="color: white">Create a new post</a>
+            </button>
+            </th>
+            <th>
+                <button class="btn btn-primary" style="background-color: #28a745;"  type="button">
+                <a href="{% url 'bboard:comment_add' %}" style="color: white">Create a new comment</a>
+                </button>
+            </th>
 
         </tr>
         <tr>
