--- a/Board/templates/protect/index.html
+++ b/Board/templates/protect/index.html
@@ -8,7 +8,7 @@
 </form>
 <hr>
 <button><a href="/">discard filter</a></button>
-
+<button><a href="bboard/">main page</a></button>
 <h4>comments</h4>
 {% if comments %}
 {% for comment in comments %}
