--- a/Board/templates/post.html
+++ b/Board/templates/post.html
@@ -12,6 +12,8 @@
             <th style="background-color: #FFC107; color: #000000;">{{ 'Title' }}</th>
             <th style="background-color: #3498DB; color: #ffffff;">{{ 'Text' }}</th>
             <th style="background-color: #FFC107; color: #000000;">{{ 'Comment' }}</th>
+            <th style="background-color: #FFC107; color: #000000;">{{ 'Image' }}</th>
+
 
         </tr>
     </thead>
@@ -21,6 +23,8 @@
             <td>{{ post.title }}</td>
             <td>{{ post.text }}</td>
             <td><a href="{% url 'bboard:comment_add'   %}">add</a></td>
+    <td><img src="{{ post.media.image.url }}" alt="{{ post.title }}" /></td>
+
 
         </tr>
     </tbody>
