--- a/Board/templates/weekly_post.html
+++ b/Board/templates/weekly_post.html
@@ -1,1 +1,5 @@
-<h2>here should be a link for weekly posts</h2>
+<h1>weekly posts</h1>
+{% for post in posts %}
+    <a href="{{ post.url }}">{{ post.title }}</a> by {{ post.author }}
+{% endfor %}
+
