--- a/Board/templates/post_create.html
+++ b/Board/templates/post_create.html
@@ -6,6 +6,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    {{ form.media }}
     <input type="submit" value="Save">
 
 </form>
